--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -12,6 +12,7 @@
   font-style: normal;
   padding-left: 10vw;
   padding-right: 10vw;
+  /* position: relative; */
 }
 
 .title-header {
@@ -103,14 +104,19 @@
 .subtitle{
   width: 100%;
   font-size: 1.5rem;
-  color: #585959;
+  /* color: #585959; */
+  color: #000000;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  position: relative;
 }
 
 /* title for desktop */
 @media only screen and (min-width: 1000px) {
   .subtitle{
       font-size: 1.2rem;
-      color: #585959;
+      /* color: #585959; */
     }
   
 }
@@ -484,6 +490,23 @@ a:visited{
   text-decoration: underline;
 }
 
+.rp a:after{
+  /* padding-left: 10px;
+  width: 15px;
+  height: 15px;
+  content: url('/icons/right-up.png'); */
+  background-image: url('/icons/right-up.png');
+  background-size: 25px 25px;
+  display: inline-block;
+  width: 25px; 
+  height: 25px;
+  content:"";
+}
+
+.rp .header-buttons, .header-row a:after{
+  background-image: none;
+}
+
 
 /* Source: https://getcssscan.com/css-buttons-examples */
 button {
@@ -693,3 +716,62 @@ button:active {
   width: 25px;
 }
 
+.proj-menu-box{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  color: #000000;
+  cursor: pointer;
+  /* width: 12vw; */
+  /* border: 1px solid #000000; */
+}
+
+
+.proj-icon{
+  width: 20px;
+  display: block;
+  transform: rotate(90deg);
+}
+
+.proj-icon.open{
+  transform: rotate(0deg);
+}
+
+.proj-drop-menu {
+  position: absolute;
+  top: 3vh;
+  /* left: 60vw; */
+  /* left: 0; */
+  z-index: 10;
+  width: inherit;
+  /* margin-left: -10vw; */
+  padding: 0;
+  list-style: none;
+  background: white;
+  /* border: 1px solid #000000; */
+  /* box-shadow: 0 2px 5px rgba(0,0,0,0.2); */
+}
+
+.proj-menu-title{
+  border: 1px solid #000000;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  /* width: 100%; */
+  height: 2vh;
+  padding: 12px;
+  gap: 10px;
+}
+
+.proj-drop-menu li {
+  padding: 10px;
+  cursor: pointer;
+  border: 1px solid #000000;
+  font-weight: 600;
+}
+
+.proj-drop-menu li:hover {
+  background: #f1f1f1;
+}
